syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.ecommerce.grpc.inventory";
option java_outer_classname = "InventoryProto";

package inventory;

service InventoryService {
  rpc GetStock (StockRequest) returns (StockResponse);
}

message StockRequest {
  string product_id = 1;
}

message StockResponse {
  string product_id = 1;
  int32 quantity = 2;
}